--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ author: 'SOZO Design Ltd (https://sozodesign.co.uk)'
 
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: 'docker://ghcr.io/sozodesign/curl-action:v1.0.0'
 
 branding:
   icon: 'globe'
